# pdf-img-inserter

./: .gitignore  ARCHITECTURE.md  README.md  TESTS.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/: dependabot.yml
.github/workflows/: tauri-build.yml
scripts/: enforce-pnpm.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: batch.rs  error.rs  lib.rs  logging.rs  main.rs
src-tauri/src/config/: loader.rs  mod.rs  models.rs
src-tauri/src/coord/: transform.rs
src-tauri/src/image/: cache.rs  mod.rs  preprocess.rs  preview_store.rs
src-tauri/src/pdf/: processor.rs
src-tauri/tests/: config_loader_tests.rs  coord_transform_tests.rs  image_cache_tests.rs
src-tauri/tests/common/: mod.rs
src/components/: ConfigPanel.tsx  LogConsole.tsx  PreviewPanel.tsx  TaskDialog.tsx  TaskList.tsx
src/components/ui/: button.tsx  card.tsx  input.tsx  scroll-area.tsx  switch.tsx
src/hooks/: useAppState.ts  useConfig.ts  useLocale.ts  useTauriEvent.ts  useTheme.ts
src/i18n/: i18next.d.ts  index.ts  locale.ts  resources.ts
src/lib/: tauri-commands.ts  types.ts
