[package]
name = "pdf-img-inserter"
version = "0.1.0"
description = "PDF Image Inserter - Batch insert images into PDFs based on text search"
authors = ["you"]
edition = "2021"

[lib]
name = "pdf_img_inserter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "sync"] }
rayon = "1"
image = "0.25"
lru = "0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
parking_lot = "0.12"
rand = "0.10"
pdfium-render = { version = "0.8", features = ["thread_safe", "image"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
